01/02/2019
==========
-Input ports support
-Fix to GAME struct
-Added MachineDriver support
-Improvented null's conversion in MachineDriver (still not accurate)
-More improvement in  null's conversion in MachineDriver (still not accurate)

31/01/2019
==========
-Improved WRITEHANDLER for 8bit writes
-Implemented GAME,GAMEX macros

30/01/2019
==========
-Implemented MEMORY_READ for 8bit handlers
-Implemented MEMORY_WRITE for 8bit handlers
-Implemented PORT_READ for 8bit handlers
-Implemented PORT_WRITE for 8bit handlers
-Removed references inside MEMORY-PORT handlers
-Implemented READHANDLER for 8 bit reads
-Implemented WRITEHANDLER for 8 bit writes
-Implemented GFXLayout support
-Implemented GFXDecode support
-ROM Macros conversion support
-Improved READHANDLER for 8 bit reads

29/01/2019
==========
-Intial convertor
-Partial support for enums conversion
-Convert if(!variable) to if(variable==0)
-plot_box , mark_dirty,plot_pixel support for drawgfx file
-read_pixel support for drawgfx file