@@ -242,12 +242,12 @@ public class circusc
 	
 	
 	
-	static struct SN76496interface sn76496_interface =
-	{
+	static SN76496interface sn76496_interface = new SN76496interface
+	(
 		2,      /* 2 chips */
-		{ 14318180/8, 14318180/8 },     /*  1.7897725 MHz */
-		{ 100, 100 }
-	};
+		new int[] { 14318180/8, 14318180/8 },     /*  1.7897725 MHz */
+		new int[] { 100, 100 }
+	);
 	
 	static struct DACinterface dac_interface =
 	{
