@@ -573,12 +573,12 @@ public class gberet
 	
 	
 	
-	static struct SN76496interface sn76496_interface =
-	{
+	static SN76496interface sn76496_interface = new SN76496interface
+	(
 		1,	/* 1 chip */
-		{ 18432000/12 },	/* 2H (generated by a custom IC) */
-		{ 100 }
-	};
+		new int[] { 18432000/12 },	/* 2H (generated by a custom IC) */
+		new int[] { 100 }
+	);
 	
 	
 	
