@@ -153,12 +153,12 @@ public class mrjong
 	};
 	
 	
-	static struct SN76496interface sn76496_interface =
-	{
+	static SN76496interface sn76496_interface = new SN76496interface
+	(
 		2,				/* 2 chips (SN76489) */
-		{ 15468000/6, 15468000/6 },	/* 2.578 MHz */
-		{ 100, 100 }
-	};
+		new int[] { 15468000/6, 15468000/6 },	/* 2.578 MHz */
+		new int[] { 100, 100 }
+	);
 	
 	
 	static MachineDriver machine_driver_mrjong = new MachineDriver
