@@ -1384,12 +1384,12 @@ public class segar
 	);
 	
 	
-	static struct SN76496interface sn76496_interface =
-	{
+	static SN76496interface sn76496_interface = new SN76496interface
+	(
 		2,          /* 2 chips */
-		{ 4000000, 2000000 },    /* I'm assuming that the sound board is the same as System 1 */
-		{ 100, 100 }
-	};
+		new int[] { 4000000, 2000000 },    /* I'm assuming that the sound board is the same as System 1 */
+		new int[] { 100, 100 }
+	);
 	
 	static MachineDriver machine_driver_sindbadm = new MachineDriver
 	(
