@@ -252,12 +252,12 @@ public class yiear
 	
 	
 	
-	struct SN76496interface sn76496_interface =
-	{
+	static SN76496interface sn76496_interface = new SN76496interface
+	(
 		1,			/* 1 chip */
-		{ 18432000/12 },	/*  1.536 MHz */
-		{ 100 }
-	};
+		new int[] { 18432000/12 },	/*  1.536 MHz */
+		new int[] { 100 }
+	);
 	
 	struct VLM5030interface vlm5030_interface =
 	{
